--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="blocJams">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Base Project</title>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <h4>Hello, World???</h4>
+    <h4>Hello, World??</h4>
+     {{ 2 + 2 }}
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="/scripts/app.js"></script>
 </body>
 </html>
