--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/landing.css">
+    <link rel="stylesheet" href="/styles/collection.css">
+    <link rel="stylesheet" href="/styles/album.css">
+
 </head>
 <body>
     <nav class="navbar"> <!-- nav bar -->
-            <a ui-sref="index" class="logo">
+            <a ui-sref="landing" class="logo">
                 <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
             </a>
          <div class="links-container">
