--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/landing.css">
+    <link rel="stylesheet" href="/styles/collection.css">
+    <link rel="stylesheet" href="/styles/album.css">
+    <link rel="stylesheet" href="/styles/player-bar.css">
+
 </head>
 <body>
     <nav class="navbar"> <!-- nav bar -->
